--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <hello name="{{ name }}"></hello>
+<hello last_name= "{{last_name}}"></hello>
 <p>
-  Start editing to see some magic happen :)
+  Start editing
 </p>
